# checkers_bot

./: .gitignore  CMakeLists.txt  README.md
include/: field.h  play.h  unit.h
playground/: main.cpp
src/: CMakeLists.txt  field.cpp  helpers.cpp  play.cpp
